{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 19,
  "lineage": "f1610fd1-3b9d-5865-60b2-fcb93ef2c9d9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "each",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-00149dab4a12107f1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-00149dab4a12107f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "available_ip_address_count": 249,
            "cidr_block": "172.31.241.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00149dab4a12107f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "tags": {
              "Name": "strapi-private-subnet-2-vivek"
            },
            "vpc_id": "vpc-06ba36bca6b59f95e"
          }
        },
        {
          "index_key": "subnet-024126fd1eb33ec08",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-024126fd1eb33ec08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 245,
            "cidr_block": "172.31.64.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024126fd1eb33ec08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "tags": {
              "Name": "Ohio-Public-Subnet-0"
            },
            "vpc_id": "vpc-06ba36bca6b59f95e"
          }
        },
        {
          "index_key": "subnet-03e27b60efa8df9f0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-03e27b60efa8df9f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "available_ip_address_count": 235,
            "cidr_block": "172.31.65.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e27b60efa8df9f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "tags": {
              "Name": "Ohio-Public-Subnet-1"
            },
            "vpc_id": "vpc-06ba36bca6b59f95e"
          }
        },
        {
          "index_key": "subnet-076c196189d4c13aa",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-076c196189d4c13aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 251,
            "cidr_block": "172.31.120.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076c196189d4c13aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "tags": {
              "Name": "strapi-private-subnet-1-vivek"
            },
            "vpc_id": "vpc-06ba36bca6b59f95e"
          }
        },
        {
          "index_key": "subnet-08f5bc03df5540de0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-08f5bc03df5540de0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "available_ip_address_count": 251,
            "cidr_block": "172.31.110.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f5bc03df5540de0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "tags": {
              "Name": "strapi-private-subnet-2-vivek"
            },
            "vpc_id": "vpc-06ba36bca6b59f95e"
          }
        },
        {
          "index_key": "subnet-0906c244cfe901a9a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-0906c244cfe901a9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 251,
            "cidr_block": "172.31.101.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0906c244cfe901a9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "vpc_id": "vpc-06ba36bca6b59f95e"
          }
        },
        {
          "index_key": "subnet-09b655d14dc1afa7b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-09b655d14dc1afa7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "available_ip_address_count": 251,
            "cidr_block": "172.31.231.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b655d14dc1afa7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "tags": {
              "Name": "strapi-private-subnet-2-vivek"
            },
            "vpc_id": "vpc-06ba36bca6b59f95e"
          }
        },
        {
          "index_key": "subnet-0a1e6640cafebb652",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-0a1e6640cafebb652",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 249,
            "cidr_block": "172.31.230.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1e6640cafebb652",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "tags": {
              "Name": "strapi-private-subnet-1-vivek"
            },
            "vpc_id": "vpc-06ba36bca6b59f95e"
          }
        },
        {
          "index_key": "subnet-0a9bd2d5824022395",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-0a9bd2d5824022395",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "available_ip_address_count": 251,
            "cidr_block": "172.31.130.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9bd2d5824022395",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "tags": {
              "Name": "strapi-private-subnet-2-vivek"
            },
            "vpc_id": "vpc-06ba36bca6b59f95e"
          }
        },
        {
          "index_key": "subnet-0b9f39d263cc6b914",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-0b9f39d263cc6b914",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 251,
            "cidr_block": "172.31.240.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9f39d263cc6b914",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "tags": {
              "Name": "strapi-private-subnet-1-vivek"
            },
            "vpc_id": "vpc-06ba36bca6b59f95e"
          }
        },
        {
          "index_key": "subnet-0c0bb5df2571165a9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-0c0bb5df2571165a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 4086,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0bb5df2571165a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "vpc_id": "vpc-06ba36bca6b59f95e"
          }
        },
        {
          "index_key": "subnet-0cc2ddb32492bcc41",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-0cc2ddb32492bcc41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "available_ip_address_count": 248,
            "cidr_block": "172.31.102.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc2ddb32492bcc41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "vpc_id": "vpc-06ba36bca6b59f95e"
          }
        },
        {
          "index_key": "subnet-0cc813dd4d76bf797",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-0cc813dd4d76bf797",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "available_ip_address_count": 4085,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc813dd4d76bf797",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "vpc_id": "vpc-06ba36bca6b59f95e"
          }
        },
        {
          "index_key": "subnet-0d050e7296d79b56a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-0d050e7296d79b56a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "available_ip_address_count": 250,
            "cidr_block": "172.31.180.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d050e7296d79b56a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "tags": {
              "Name": "strapi-private-subnet-2-vivek"
            },
            "vpc_id": "vpc-06ba36bca6b59f95e"
          }
        },
        {
          "index_key": "subnet-0d37d2b756d0164a1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-0d37d2b756d0164a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 251,
            "cidr_block": "172.31.150.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d37d2b756d0164a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "tags": {
              "Name": "strapi-private-subnet-1-vivek"
            },
            "vpc_id": "vpc-06ba36bca6b59f95e"
          }
        },
        {
          "index_key": "subnet-0dc0f70ddea3c7b99",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-0dc0f70ddea3c7b99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 242,
            "cidr_block": "172.31.200.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc0f70ddea3c7b99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "tags": {
              "Name": "strapi-private-subnet-1-vivek"
            },
            "vpc_id": "vpc-06ba36bca6b59f95e"
          }
        },
        {
          "index_key": "subnet-0f1ea472d7f96c016",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-0f1ea472d7f96c016",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "available_ip_address_count": 251,
            "cidr_block": "172.31.201.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1ea472d7f96c016",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "tags": {
              "Name": "strapi-private-subnet-2-vivek"
            },
            "vpc_id": "vpc-06ba36bca6b59f95e"
          }
        },
        {
          "index_key": "subnet-0f768008c6324831f",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-0f768008c6324831f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "available_ip_address_count": 4073,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f768008c6324831f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "vpc_id": "vpc-06ba36bca6b59f95e"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:vpc/vpc-06ba36bca6b59f95e",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-079ee5ea1da8fe27b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-03e3d26b708060323",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06ba36bca6b59f95e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0542e3cdc6e78d5ee",
            "owner_id": "607700977843",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "strapi_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:607700977843:loadbalancer/app/strapi-alb-dhan/f3725809aba2ecb9",
            "arn_suffix": "app/strapi-alb-dhan/f3725809aba2ecb9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "strapi-alb-dhan-34541714.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:607700977843:loadbalancer/app/strapi-alb-dhan/f3725809aba2ecb9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "strapi-alb-dhan",
            "preserve_host_header": false,
            "region": "us-east-2",
            "security_groups": [
              "sg-0f620fbfa7b8a1fb3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00149dab4a12107f1"
              },
              {
                "subnet_id": "subnet-024126fd1eb33ec08"
              },
              {
                "subnet_id": "subnet-0f768008c6324831f"
              }
            ],
            "subnets": [
              "subnet-00149dab4a12107f1",
              "subnet-024126fd1eb33ec08",
              "subnet-0f768008c6324831f"
            ],
            "vpc_id": "vpc-06ba36bca6b59f95e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.strapi_sg",
            "data.aws_subnet.each",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:607700977843:listener/app/strapi-alb-dhan/f3725809aba2ecb9/0489adac4b4a0307",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:607700977843:targetgroup/strapi-tg-dhan/fe3c7fdd44b69d1c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:607700977843:listener/app/strapi-alb-dhan/f3725809aba2ecb9/0489adac4b4a0307",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:607700977843:loadbalancer/app/strapi-alb-dhan/f3725809aba2ecb9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.strapi_alb",
            "aws_lb_target_group.strapi_tg",
            "aws_security_group.strapi_sg",
            "data.aws_subnet.each",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "strapi_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:607700977843:targetgroup/strapi-tg-dhan/fe3c7fdd44b69d1c",
            "arn_suffix": "targetgroup/strapi-tg-dhan/fe3c7fdd44b69d1c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:607700977843:targetgroup/strapi-tg-dhan/fe3c7fdd44b69d1c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "strapi-tg-dhan",
            "port": 1337,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06ba36bca6b59f95e"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "strapi_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:security-group/sg-0f620fbfa7b8a1fb3",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f620fbfa7b8a1fb3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "strapi-sg-dhan",
            "name_prefix": "",
            "owner_id": "607700977843",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06ba36bca6b59f95e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}